Adding commands and cogs.

--- a/config.json
+++ b/config.json
@@ -2,6 +2,6 @@
     "dev_ids": [
         529499034495483926
     ],
-    "success": "<::>",
-    "forbidden": "<::>"
+    "success": "<:success:890082793235816449>",
+    "forbidden": "<:forbidden:890082794112446548>"
 }
