--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+APPLICATION_ID=891952531926843402
 TOKEN=ODAxNzY5MjM4MjQ3MTEyNzI1.YAlfyg.zZScLobazEOHbvJJLZWDxdqz3Hk
 DEV_ID=529499034495483926
 CORE_GUILD=000000000000000000
